--- a/Selenium C# Test/SeleniumCSharpTest/SeleniumCSharpTest/packages.config
+++ b/Selenium C# Test/SeleniumCSharpTest/SeleniumCSharpTest/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentAssertions" version="2.2.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net452" />
+  <package id="Selenium.Automation.Framework" version="0.0.1.2" targetFramework="net452" />
   <package id="Selenium.Chrome.WebDriver" version="2.33" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="3.6.0" targetFramework="net452" />
 </packages>
