--- a/Selenium C# Test/SeleniumCSharpTest/SeleniumCSharpTest/packages.config
+++ b/Selenium C# Test/SeleniumCSharpTest/SeleniumCSharpTest/packages.config
@@ -5,4 +5,5 @@
   <package id="Selenium.Automation.Framework" version="0.0.1.2" targetFramework="net452" />
   <package id="Selenium.Chrome.WebDriver" version="2.33" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.6.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.33.0" targetFramework="net452" />
 </packages>
