--- a/Selenium C# Test/SeleniumCSharpTest/SeleniumCSharpTest/SeleniumCSharpTest.csproj
+++ b/Selenium C# Test/SeleniumCSharpTest/SeleniumCSharpTest/SeleniumCSharpTest.csproj
@@ -57,8 +57,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="moTrangChu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="testClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
