--- a/Selenium C# Test/SeleniumCSharpTest/SeleniumTest/SeleniumTest.csproj
+++ b/Selenium C# Test/SeleniumCSharpTest/SeleniumTest/SeleniumTest.csproj
@@ -57,6 +57,11 @@
       <DependentUpon>formTestChinh.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="testClass.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +72,13 @@
     <EmbeddedResource Include="formTestChinh.resx">
       <DependentUpon>formTestChinh.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\test.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.Chrome.WebDriver.2.33\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('..\packages\Selenium.Chrome.WebDriver.2.33\build\Selenium.Chrome.WebDriver.targets')" />
