--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,7 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-  <display-name>web-mobile</display-name>
-  <welcome-file-list>
-    <welcome-file>trang-chu.jsp</welcome-file>
-  </welcome-file-list>
+	<display-name>web-mobile</display-name>
+	<welcome-file-list>
+	  <welcome-file>trang-chu.jsp</welcome-file>
+	</welcome-file-list>
+  	<servlet>
+	    <servlet-name>trang-chu.jsp</servlet-name>
+	    <jsp-file>/trang-chu.jsp</jsp-file>
+	</servlet>
+	
+	<servlet-mapping>
+	    <servlet-name>trang-chu.jsp</servlet-name>
+	    <url-pattern>/trang-chu</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+	    <servlet-name>dang-ky.jsp</servlet-name>
+	    <jsp-file>/dang-ky.jsp</jsp-file>
+	</servlet>
+	
+	<servlet-mapping>
+	    <servlet-name>dang-ky.jsp</servlet-name>
+	    <url-pattern>/dang-ky</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+	    <servlet-name>dang-nhap.jsp</servlet-name>
+	    <jsp-file>/dang-nhap.jsp</jsp-file>
+	</servlet>
+	
+	<servlet-mapping>
+	    <servlet-name>dang-nhap.jsp</servlet-name>
+	    <url-pattern>/dang-nhap</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+	    <servlet-name>contact.jsp</servlet-name>
+	    <jsp-file>/contact.jsp</jsp-file>
+	</servlet>
+	
+	<servlet-mapping>
+	    <servlet-name>contact.jsp</servlet-name>
+	    <url-pattern>/contact</url-pattern>
+	</servlet-mapping>
 </web-app>
